--- a/danhSachSanPham.css
+++ b/danhSachSanPham.css
@@ -22,3 +22,21 @@
         color: black;
     }
 }
+.container-conten{
+    ul{
+        list-style-type: none;
+    }
+    ul li{
+        margin: 20px;
+    }
+    li a{
+        text-decoration: none;
+        font-size: large; 
+    }
+    a:hover{
+        padding: 5px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 68, 255);
+        border-radius: 5px;
+        }
+}
