--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         padding: 5px 15px;
     }
 
-    a:hover {
+    .menu-list:hover {
         background-color: aliceblue;
         color: black;
     }
